css/main.css
/* ... */
/* ------------------------------------------------*/
/* Basic Styles End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Animations - Backgrounds Start */
/* ------------------------------------------------*/
.gradient-background {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  overflow: hidden;
}

.blur {
  position: absolute;
  z-index: 1;
  -moz-border-radius: 900px;
       border-radius: 900px;
  -webkit-filter: blur(clamp(40px, 7vw, 90px));
          filter: blur(clamp(40px, 7vw, 90px));
}
.blur:nth-of-type(1) {
  background: var(--gradient-one);
  height: clamp(400px, 20vw, 60vw);
  width: -moz-calc(clamp(400px, 30vw, 70vw) * 1.1);
  width: calc(clamp(400px, 30vw, 70vw) * 1.1);
  top: -10vh;
  right: -5vw;
}
.blur:nth-of-type(2) {
  background: var(--gradient-two);
  height: clamp(300px, 16vw, 46vw);
  width: -moz-calc(clamp(300px, 16vw, 56vw) * 0.75);
  width: calc(clamp(300px, 16vw, 56vw) * 0.75);
  top: 5vh;
  right: 0vw;
}
.blur:nth-of-type(3) {
  background: var(--gradient-three);
  height: clamp(100px, 20vw, 20vw);
  width: -moz-calc(clamp(100px, 20vw, 20vw) * 2);
  width: calc(clamp(100px, 20vw, 20vw) * 2);
  top: -10vh;
  left: -10vw;
}

.image-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 110vh;
  overflow: hidden;
  background-position: center center;
  -moz-background-size: cover;
       background-size: cover;
  background-repeat: no-repeat;
}

.svg-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
}
.svg-background.loaded .background__svg01 svg {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
          transform: translate3d(0, 0, 0);
}
.svg-background.loaded .background__svg02 svg {
  opacity: 1;
  -webkit-transform: translate3d(0, 0, 0);
     -moz-transform: translate3d(0, 0, 0);
          transform: translate3d(0, 0, 0);
}

.background__svg01 {
  position: absolute;
  top: -15vh;
  right: -30vw;
  width: 320px;
  height: 320px;
}
.background__svg01 svg {
  width: 100%;
  height: 100%;
  opacity: 0;
  -webkit-transform: translate3d(50px, -50px, 0);
     -moz-transform: translate3d(50px, -50px, 0);
          transform: translate3d(50px, -50px, 0);
  -webkit-transition: opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier);
  transition: opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier);
  -moz-transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier), -moz-transform 0.8s var(--_animbezier);
  transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier);
  transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier), -moz-transform 0.8s var(--_animbezier);
}
@media only screen and (min-width: 768px) {
  .background__svg01 {
    top: -15vh;
    right: -10vw;
    width: 465px;
    height: 465px;
  }
}
@media only screen and (min-width: 992px) {
  .background__svg01 {
    top: -17vh;
    right: -8vw;
  }
}
@media only screen and (min-width: 1200px) {
  .background__svg01 {
    top: -25vh;
    right: -6vw;
    width: 580px;
    height: 580px;
  }
}
@media only screen and (min-width: 1400px) {
  .background__svg01 {
    top: -25vh;
    right: -8vw;
    width: 680px;
    height: 680px;
  }
}
@media only screen and (min-width: 1600px) {
  .background__svg01 {
    top: -45vh;
    right: -5vw;
    width: 880px;
    height: 880px;
  }
}

.background__svg02 {
  position: absolute;
  top: 60vh;
  left: -40vw;
  width: 320px;
  height: 320px;
}
.background__svg02 svg {
  width: 100%;
  height: 100%;
  opacity: 0;
  -webkit-transform: translate3d(-50px, 50px, 0);
     -moz-transform: translate3d(-50px, 50px, 0);
          transform: translate3d(-50px, 50px, 0);
  -webkit-transition: opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier);
  transition: opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier);
  -moz-transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier), -moz-transform 0.8s var(--_animbezier);
  transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier);
  transition: transform 0.8s var(--_animbezier), opacity 0.8s var(--_animbezier), -webkit-transform 0.8s var(--_animbezier), -moz-transform 0.8s var(--_animbezier);
}
@media only screen and (min-width: 768px) {
  .background__svg02 {
    top: 70vh;
    left: -20vw;
  }
}
@media only screen and (min-width: 992px) {
  .background__svg02 {
    top: 70vh;
    left: -8vw;
  }
}
@media only screen and (min-width: 1400px) {
  .background__svg02 {
    top: 60vh;
    left: -8vw;
    width: 425px;
    height: 425px;
  }
}

/* ------------------------------------------------*/
/* Animations - Backgrounds End */
/* ------------------------------------------------*/
/* ------------------------------------------------*/
/* Elements - Typography Start */
/* ------------------------------------------------*/
h1 {
  font: normal 700 3.8rem/1.2 var(--_font-accent);
  color: var(--t-accent);
  background: var(--t-accent);
  background: -webkit-linear-gradient(15deg, var(--t-accent) 0%, var(--t-secondary) 80%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
@media only screen and (min-width: 768px) {
  h1 {
    font-size: 5rem;
  }
}
@media only screen and (min-width: 1200px) {
  h1 {
    font-size: 6rem;
  }
}
@media only screen and (min-width: 1400px) {
  h1 {
    font-size: 7rem;
  }
}
@media only screen and (min-width: 1600px) {
  h1 {
    font-size: 8rem;
  }
}
/* ... */

